<resources>
    <string name="app_name">Payungapp</string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email1">Email</string>
    <string name="display_name">Display Name</string>
    <string name="status">Status</string>
    <string name="daftar1">Daftar</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lupa_password">Lupa password</string>
    <string name="login2">Login</string>
    <string name="login3">Login</string>
    <string name="temukan_teman_berbagi">Temukan Teman Berbagi</string>
    <string name="title1">title</string>
    <string name="this_is_story">This is Story</string>
    <string name="background">background</string>
    <string name="nav_search">Search</string>
    <string name="chat">Chat</string>
    <string name="timeline">Timeline</string>
    <string name="komunitas">Community</string>
    <string name="profile">Profile</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_timeline">Timeline</string>
    <string name="nav_forum">Forum</string>
    <string name="nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payung_app">Help people</string>
    <string name="pasien1">Payung App membantu penderita agar tidak merasa sendirian dalam menderita penyakit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
</resources>
